--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,6 @@
       <div class="photographer-section"></div>
     </main>
 
-    <script src="scripts/factories/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
+    <script type="module" src="scripts/pages/index.js"></script>
   </body>
 </html>
