--- a/src/photographer.html
+++ b/src/photographer.html
@@ -12,10 +12,14 @@
     />
     <title>Fisheye - photographe</title>
   </head>
+
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+      <a href="index.html" aria-hidden="false">
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"
+      /></a>
     </header>
+
     <main id="main">
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">
