--- a/src/photographer.html
+++ b/src/photographer.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
@@ -6,43 +7,27 @@
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+      integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
+      crossorigin="anonymous"
+    ></script>
     <title>Fisheye - photographe</title>
   </head>
 
   <body>
-    <header>
+    <header id="header" aria-hidden="false">
       <a href="index.html" aria-hidden="false">
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"
       /></a>
     </header>
 
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">
-          Contactez-moi
-        </button>
-      </div>
+    <main id="main" aria-hidden="false">
+      <div class="photographer-banner"></div>
+      <div class="photographer-gallery" tabindex="0"></div>
     </main>
-    <div id="contact_modal">
-      <div class="modal">
-        <header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" alt="" />
-        </header>
-        <form>
-          <div>
-            <label>Prénom</label>
-            <input />
-          </div>
-          <button class="contact_button">Envoyer</button>
-        </form>
-      </div>
-    </div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
+
+    <script type="module" src="scripts/pages/photographer.js"></script>
   </body>
 </html>
