Ajout commentaires dans le code suite évaluation pour une meilleur orientation permettant de ne plus ce perdre dans la lecture du code

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <!-- header -->
     <header id="header" aria-hidden="false">
       <a href="index.html" aria-label="Fisheye Home page"
         ><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"
@@ -23,10 +24,12 @@
       <h1>Nos photographes</h1>
     </header>
 
+    <!-- section photographes -->
     <main id="main" aria-hidden="false">
       <div class="photographer-section"></div>
     </main>
 
+    <!-- recupération du script de type module -->
     <script type="module" src="scripts/pages/index.js"></script>
   </body>
 </html>
