--- a/src/photographer.html
+++ b/src/photographer.html
@@ -17,17 +17,20 @@
   </head>
 
   <body>
+    <!-- header -->
     <header id="header" aria-hidden="false">
       <a href="index.html" aria-hidden="false">
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"
       /></a>
     </header>
 
+    <!-- section photographe -->
     <main id="main" aria-hidden="false">
       <div class="photographer-banner"></div>
       <div class="photographer-gallery" tabindex="0"></div>
     </main>
 
+    <!-- recupération du script de type module -->
     <script type="module" src="scripts/pages/photographer.js"></script>
   </body>
 </html>
